# black_flag

./: CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/include/: engine.h
engine/src/: engine.c
engine/src/core/: d_array.c  d_array.h  engine.c  engine_internal.h  file_io.c  file_io.h  input.c
engine/src/graphics/: renderer.h
engine/src/graphics/backends/: opengl_renderer.c
engine/src/platform/: platform.h  sdl_platform.c
sandbox/: CMakeLists.txt
sandbox/src/: main.c
